# mower_robot

./: CMakeLists.txt  CMakeLists.txt.save  package.xml
0214/: 001.bag  001.csv  002.bag  003.bag  004.bag  005.bag  006.bag  007.bag  008.bag  009.bag  010.bag  011.bag  012.bag  013.bag  014.bag  015.bag  016.bag  017.bag  018.bag  019.bag  020.bag
0304/: memo.txt
0305/: memo.txt
0306/: memo.txt
0307/: memo.txt
0315/: barikan_taira.bag  dochimo.bag  dochimo_3.bag  memo.txt
data_measurement/: platformio.ini
distance_ws/: platformio.ini
launch/: mower_robot_barikan.launch  mower_robot_camera.launch  mower_robot_current.launch  mower_robot_distance.launch  mower_robot_joy.launch  mower_robot_keyboard.launch  mower_robot_plotter.launch  mower_robot_serial_class.launch  mower_robot_start.launch  mower_robot_wakeup.launch
mower_robot_farmware/: platformio.ini
resources/: 01170814.bag  01170822.bag  0838.bag  0838.csv  0842.bag  0842.csv  0843.bag  0843.csv  1615.bag  1615.csv  1626.bag  1627.bag  1911.bag  1911.csv  1917.bag  1922.bag  1922.csv  1930.bag  1930.csv  1931.bag  1931.csv  1932.bag  1932.csv  1933.bag  1933.csv  1947.bag  1947.csv  1950.bag  1950.csv  1955.bag  1955.csv  1956.bag  1956.csv  1957.bag  1957.csv  1958.bag  1958.csv  1959.bag  1959.csv  2120.bag  (+8 more)
rviz/: mower_robot_data_measurement.rviz
scripts/: analisys_distance.py  analisys_distance_purpose.py  mower_robot_realtime_plotter1.py  mower_robot_realtime_plotter2.py  mower_robot_realtime_plotter4.py  mower_robot_serial.py  rosbag_analisys_current_data.py  rosbag_analisys_data.py  (+7 more)
(+102 files in other folders)
